[gd_scene load_steps=8 format=3 uid="uid://cys1dytwniotr"]

[ext_resource type="Texture2D" uid="uid://d3wot3t2r31c7" path="res://Gameover box.png" id="1_q775a"]
[ext_resource type="Script" uid="uid://xpf5rd1lfug1" path="res://PauseMenu.gd" id="1_sev4g"]
[ext_resource type="Texture2D" uid="uid://b6fo7gwufy1f8" path="res://ReTRY button.png" id="2_qg8xq"]
[ext_resource type="Texture2D" uid="uid://cihfd8shjguad" path="res://mENU button.png" id="3_36k83"]
[ext_resource type="Texture2D" uid="uid://cqttxrpsyq8hm" path="res://X button.png" id="4_qg8xq"]
[ext_resource type="FontFile" uid="uid://dv6rxjsqf5lyn" path="res://PressStart2P.ttf" id="6_r2gvh"]
[ext_resource type="Texture2D" uid="uid://bq4anywv7onew" path="res://Backgorunds.png" id="6_sev4g"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sev4g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 2
layer = 100

[node name="GameBox" type="TextureRect" parent="CanvasLayer"]
offset_left = -302.0
offset_top = 430.0
offset_right = 1453.0
offset_bottom = 1243.0
scale = Vector2(0.754051, 0.593953)
texture = ExtResource("1_q775a")

[node name="RestartButtonContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 179.0
offset_top = 582.0
offset_right = 1934.0
offset_bottom = 2202.0
scale = Vector2(0.203819, 0.167749)
theme_override_constants/separation = 30

[node name="RestartButton" type="TextureButton" parent="CanvasLayer/RestartButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_qg8xq")

[node name="MenuButtonContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 179.0
offset_top = 723.0
offset_right = 1934.0
offset_bottom = 2343.0
scale = Vector2(0.203819, 0.167749)
theme_override_constants/separation = 30

[node name="MenuButton" type="TextureButton" parent="CanvasLayer/MenuButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_36k83")

[node name="XButtonContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 505.0
offset_top = 485.0
offset_right = 2260.0
offset_bottom = 2105.0
scale = Vector2(0.0677106, 0.0641023)
theme_override_constants/separation = 30

[node name="XButton" type="TextureButton" parent="CanvasLayer/XButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_qg8xq")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 119.0
offset_top = 493.0
offset_right = 344.0
offset_bottom = 538.0
theme_override_colors/font_color = Color(0.403922, 0.231373, 0.027451, 1)
theme_override_fonts/font = ExtResource("6_r2gvh")
theme_override_font_sizes/font_size = 45
text = "Hmm?"

[node name="Backgorunds" type="Sprite2D" parent="."]
visible = false
position = Vector2(359, -1673)
scale = Vector2(0.388933, 0.425767)
texture = ExtResource("6_sev4g")
